--- a/springboot-apirest/src/main/resources/application.properties
+++ b/springboot-apirest/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=debug
 server.port=8087
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
